commitng right file

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:image" content="my-app\public\littlelemon.jpg"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="og:description"
+      content="Little lemon is a Mediterranean restaurant"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
