--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
